<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_nano_title">My Nanodegree Apps!</string>
    <string name="spotify_stream">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="lib_app">LIBRARY APP</string>
    <string name="build_it_big">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my">CAPSTONE: MY OWN APP</string>
</resources>
