<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#BBDEFB">

        <TextView
            android:text="@string/app_nano_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:text="@string/spotify_stream"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#2962FF"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:text="@string/scores_app"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:background="#2962FF"
            android:padding="5dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:text="@string/lib_app"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:background="#2962FF"
            android:padding="5dp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:text="@string/build_it_big"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:background="#2962FF"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:text="@string/xyz_reader"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:background="#2962FF"
            android:padding="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:text="@string/capstone_my"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginBottom="15dp"
            android:background="#03A9F4"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_menu_material"
            android:textStyle="bold"
            android:layout_weight="1" />

    </LinearLayout>


